@@ -984,18 +984,6 @@ eval (SV* self_sv, SV* js_code_sv)
         // an exception. If not we’ll just discard the return value
         RETVAL = _return_jsvalue_or_croak(aTHX_ ctx, jsret);
 
-        if (ix) {
-
-            // The only thing a JS module should return is null.
-            // If that’s ever not the case, warn:
-            if ( UNLIKELY(RETVAL != &PL_sv_undef) ) {
-                warn("UNEXPECTED: Discarding non-null return from ES module: %" SVf, RETVAL);
-                SvREFCNT_dec(RETVAL);
-            }
-
-            RETVAL = SvREFCNT_inc(self_sv);
-        }
-
     OUTPUT:
         RETVAL
 
