@@ -4,6 +4,7 @@ Revision history for Perl extension JavaScript::QuickJS:
 - Properly free QuickJS resources upon failure to convert Perl parameters
   to JavaScript.
 - Add Promise support.
+- Make eval_module() return a promise (since QuickJS itself now does).
 
 0.19 Fri 1 Dec 2023
 - BREAKING CHANGE: Enabling std() or os() now creates globals by those names.
